--- a/coffee1-gh-pages/templates/index.html
+++ b/coffee1-gh-pages/templates/index.html
@@ -1,62 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+<style>
+	#coffee-container select[name="coffee[]"] option {
+		color: black;
+	}
+	.btn-success {
+		background-color: #28a745;
+		color: #fff;
+		border-color: #28a745;
+	}
 
-    <link rel="stylesheet" href="../static/css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/animate.css">
-    
-    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../static/css/magnific-popup.css">
-
-    <link rel="stylesheet" href="../static/css/aos.css">
-
-    <link rel="stylesheet" href="../static/css/ionicons.min.css">
-
-    <link rel="stylesheet" href="../static/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="../static/css/jquery.timepicker.css">
-
-    
-    <link rel="stylesheet" href="../static/css/flaticon.css">
-    <link rel="stylesheet" href="../static/css/icomoon.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-  </head>
-  <body>
-  	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Coffee<small>Blend</small></a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="{{ url_for('menu') }}" class="nav-link">Menu</a></li>
-	          <li class="nav-item"><a href="{{ url_for('service') }}" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
-	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="{{ url_for('shop') }}">Shop</a>
-                <a class="dropdown-item" href="product-single.html">Single Product</a>
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="{{ url_for('checkout') }}">Checkout</a>
-              </div>
-            </li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
-	        </ul>
-	      </div>
-		  </div>
-	  </nav>
-    <!-- END nav -->
+	.btn-success:hover {
+		background-color: #218838;
+		color: #fff;
+		border-color: #1e7e34;
+	}
+</style>
+{% extends 'base.html' %}
+{% block content %}
 
     <section class="home-slider owl-carousel">
       <div class="slider-item" style="background-image: url(../static/images/bg_1.jpg);">
@@ -136,44 +96,115 @@
 	    				</div>
 	    			</div>
 	    		</div>
-	    		<div class="book p-4">
-	    			<h3>Book a Table</h3>
-	    			<form action="#" class="appointment-form">
-	    				<div class="d-md-flex">
-		    				<div class="form-group">
-		    					<input type="text" class="form-control" placeholder="First Name">
-		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<input type="text" class="form-control" placeholder="Last Name">
-		    				</div>
-	    				</div>
-	    				<div class="d-md-flex">
-		    				<div class="form-group">
-		    					<div class="input-wrap">
-		            		<div class="icon"><span class="ion-md-calendar"></span></div>
-		            		<input type="text" class="form-control appointment_date" placeholder="Date">
-	            		</div>
-		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<div class="input-wrap">
-		            		<div class="icon"><span class="ion-ios-clock"></span></div>
-		            		<input type="text" class="form-control appointment_time" placeholder="Time">
-	            		</div>
-		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<input type="text" class="form-control" placeholder="Phone">
-		    				</div>
-	    				</div>
-	    				<div class="d-md-flex">
-	    					<div class="form-group">
-		              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Message"></textarea>
-		            </div>
-		            <div class="form-group ml-md-4">
-		              <input type="submit" value="Appointment" class="btn btn-white py-3 px-4">
-		            </div>
-	    				</div>
-	    			</form>
-	    		</div>
+				<!-- Booking Form -->
+<div class="book p-4">
+	<h3>Book Coffee for your event!</h3>
+	<form action="/" method="POST" class="appointment-form">
+		<div class="d-md-flex">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="First Name" name="first_name">
+			</div>
+			<div class="form-group ml-md-4">
+				<input type="text" class="form-control" placeholder="Last Name" name="last_name">
+			</div>
+		</div>
+
+		<div class="d-md-flex">
+			<div class="form-group ml-md-4">
+				<input type="text" class="form-control" placeholder="Event Name" name="event_name">
+			</div>
+			<div class="form-group ml-md-4">
+				<input type="text" class="form-control" placeholder="Location" name="location">
+			</div>
+		</div>
+
+		<div id="coffee-container">
+			<div class="coffee-entry">
+				<div class="d-md-flex">
+					<div class="form-group">
+						<select class="form-control" name="coffee[]">
+							<option value="classic">Classic</option>
+							<option value="cappuccino">Cappuccino</option>
+							<option value="latte">Latte</option>
+						</select>
+					</div>
+					<div class="form-group ml-md-4">
+						<input type="number" class="form-control" placeholder="Quantity" name="quantity[]">
+					</div>
+					<div class="form-group ml-md-2">
+						<button type="button" class="btn btn-success btn-sm add-coffee">+</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="d-md-flex">
+			<div class="form-group">
+				<div class="input-wrap">
+					<div class="icon"><span class="ion-md-calendar"></span></div>
+					<input type="text" class="form-control appointment_date" placeholder="Date" name="appointment_date">
+				</div>
+			</div>
+			<div class="form-group ml-md-4">
+				<div class="input-wrap">
+					<div class="icon"><span class="ion-ios-clock"></span></div>
+					<input type="text" class="form-control appointment_time" placeholder="Time" name="appointment_time">
+				</div>
+			</div>
+			<div class="form-group ml-md-4">
+				<input type="text" class="form-control" placeholder="Phone" name="phone">
+			</div>
+		</div>
+		<div class="d-md-flex">
+			<div class="form-group">
+				<textarea name="message" id="" cols="30" rows="2" class="form-control" placeholder="Message"></textarea>
+			</div>
+			<div class="form-group ml-md-4">
+				<input type="submit" value="Book" class="btn btn-white py-3 px-4">
+			</div>
+		</div>
+	</form>
+</div>
+
+<!-- End of Booking Form -->
+
+<script>
+	document.addEventListener("DOMContentLoaded", function() {
+		var coffeeContainer = document.getElementById("coffee-container");
+		var addButton = document.querySelector(".add-coffee");
+
+		addButton.addEventListener("click", function() {
+			var coffeeEntry = document.createElement("div");
+			coffeeEntry.classList.add("coffee-entry");
+			coffeeEntry.innerHTML = `
+				<div class="d-md-flex">
+					<div class="form-group">
+						<select class="form-control" name="coffee[]">
+							<option value="classic">Classic</option>
+							<option value="cappuccino">Cappuccino</option>
+							<option value="latte">Latte</option>
+						</select>
+					</div>
+					<div class="form-group ml-md-4">
+						<input type="number" class="form-control" placeholder="Quantity" name="quantity[]">
+					</div>
+					<div class="form-group ml-md-2">
+						<button type="button" class="btn btn-danger btn-sm remove-coffee">-</button>
+					</div>
+				</div>
+			`;
+			coffeeContainer.appendChild(coffeeEntry);
+		});
+
+		coffeeContainer.addEventListener("click", function(event) {
+			if (event.target.classList.contains("remove-coffee")) {
+				event.target.closest(".coffee-entry").remove();
+			}
+		});
+	});
+</script>
+
+
     		</div>
     	</div>
     </section>
@@ -591,7 +622,7 @@
 	              </blockquote>
 	              <div class="author d-flex mt-4">
 	                <div class="image mr-3 align-self-center">
-	                  <img src="../images/person_2.jpg" alt="">
+	                  <img src="../static/images/person_2.jpg" alt="">
 	                </div>
 	                <div class="name align-self-center">Louise Kelly <span class="position">Illustrator Designer</span></div>
 	              </div>
@@ -604,7 +635,7 @@
 	              </blockquote>
 	              <div class="author d-flex mt-4">
 	                <div class="image mr-3 align-self-center">
-	                  <img src="../images/person_3.jpg" alt="">
+	                  <img src="../static/images/person_3.jpg" alt="">
 	                </div>
 	                <div class="name align-self-center">Louise Kelly <span class="position">Illustrator Designer</span></div>
 	              </div>
@@ -617,7 +648,7 @@
 	              </blockquote>
 	              <div class="author d-flex mt-4">
 	                <div class="image mr-3 align-self-center">
-	                  <img src="../images/person_2.jpg" alt="">
+	                  <img src="../static/images/person_2.jpg" alt="">
 	                </div>
 	                <div class="name align-self-center">Louise Kelly <span class="position">Illustrator Designer</span></div>
 	              </div>
@@ -748,106 +779,8 @@
     	</div>
     </section>
 
-    <footer class="ftco-footer ftco-section img">
-    	<div class="overlay"></div>
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About Us</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(../static/images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(../static/images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
-             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Cooked</a></li>
-                <li><a href="#" class="py-2 d-block">Deliver</a></li>
-                <li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-                <li><a href="#" class="py-2 d-block">Mixed</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    
-  
-
-  <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-
-  <script src="../static/js/jquery.min.js"></script>
-  <script src="../static/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../static/js/popper.min.js"></script>
-  <script src="../static/js/bootstrap.min.js"></script>
-  <script src="../static/js/jquery.easing.1.3.js"></script>
-  <script src="../static/js/jquery.waypoints.min.js"></script>
-  <script src="../static/js/jquery.stellar.min.js"></script>
-  <script src="../static/js/owl.carousel.min.js"></script>
-  <script src="../static/js/jquery.magnific-popup.min.js"></script>
-  <script src="../static/js/aos.js"></script>
-  <script src="../static/js/jquery.animateNumber.min.js"></script>
-  <script src="../static/js/bootstrap-datepicker.js"></script>
-  <script src="../static/js/jquery.timepicker.min.js"></script>
-  <script src="../static/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="../static/js/google-map.js"></script>
-  <script src="../static/js/main.js"></script>
-    
   </body>
 </html>
+{% endblock %}
+```
