--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -7784,7 +7784,7 @@ h1, h2, h3, h4, h5,
       margin-bottom: 0; }
   .ftco-intro .wrap .book {
     width: 35%;
-    background: #c49b63; }
+    background: #0b0b0b; }
     @media (max-width: 767.98px) {
       .ftco-intro .wrap .book {
         width: 100%; } }
