--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -28,7 +28,7 @@
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
             	<h1 class="mb-3 mt-5 bread">Our Menu</h1>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Menu</span></p>
+	            <p class="breadcrumbs"><span class="mr-2"><a href="{{ url_for('index') }}">Home</a></span> <span>Menu</span></p>
             </div>
 
           </div>
@@ -66,7 +66,7 @@
 	    		</div>
 	    		<!-- Booking Form -->
 <div class="book p-4">
-	<h3>Book Coffee for your event!</h3>
+	<h3 >Book Coffee for your event!</h3>
 	<form action="/menu" method="POST" class="appointment-form">
 		<div class="d-md-flex">
 			<div class="form-group">
