--- a/coffee1-gh-pages/static/css/style.css
+++ b/coffee1-gh-pages/static/css/style.css
@@ -7344,7 +7344,7 @@ h1, h2, h3, h4, h5,
         padding-right: 20px;
         color: rgba(255, 255, 255, 0.9); } }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:focus {
-      color: #c49b63; }
+      color: #b21f2d; }
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:after, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:focus:after {
         opacity: 1; }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
@@ -7595,8 +7595,8 @@ h1, h2, h3, h4, h5,
             text-align: center; } }
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
           font-family: "Great Vibes", cursive;
-          font-size: 30px;
-          color: #c49b63; }
+          font-size: 150px;
+          color: lemonchiffon; }
         .owl-carousel.home-slider .slider-item .slider-text h1 {
           text-transform: uppercase;
           font-size: 40px;
@@ -7718,13 +7718,13 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #c49b63;
-    border: 1px solid #c49b63;
-    color: #000; }
+    background: #721c24;
+    border: 1px solid #000000;
+    color: khaki; }
     .btn.btn-primary:hover {
-      border: 1px solid #c49b63;
-      background: transparent;
-      color: #c49b63; }
+      border: 4px solid #c49b63;
+      background: #c49b63;
+      color: #721c24; }
     .btn.btn-primary.btn-outline-primary {
       border: 1px solid #c49b63;
       background: transparent;
@@ -7734,9 +7734,9 @@ h1, h2, h3, h4, h5,
         background: #c49b63;
         color: #fff; }
   .btn.btn-white {
-    background: #fff;
-    border: 1px solid #fff;
-    color: #000; }
+    background: #721c24;
+    border: 1px solid #000000;
+    color: khaki;}
     .btn.btn-white:hover {
       border: 1px solid #000;
       background: #000;
@@ -7784,7 +7784,7 @@ h1, h2, h3, h4, h5,
       margin-bottom: 0; }
   .ftco-intro .wrap .book {
     width: 35%;
-    background: #c49b63; }
+    background: #0b0b0b; }
     @media (max-width: 767.98px) {
       .ftco-intro .wrap .book {
         width: 100%; } }
