--- a/coffee1-gh-pages/templates/base.html
+++ b/coffee1-gh-pages/templates/base.html
@@ -39,18 +39,12 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
+	          <li class="nav-item "><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{{ url_for('menu') }}" class="nav-link">Menu</a></li>
 	          <li class="nav-item"><a href="{{ url_for('service') }}" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
 	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="{{ url_for('shop') }}">Shop</a>
-                <a class="dropdown-item" href="{{ url_for('product') }}">Single Product</a>
-                <a class="dropdown-item" href="{{ url_for('cart') }}">Cart</a>
-                <a class="dropdown-item" href="{{ url_for('checkout') }}">Checkout</a>
-              </div>
+
             </li>
 	          <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
 	          <li class="nav-item cart"><a href="{{ url_for('cart') }}" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
