--- a/coffee1-gh-pages/templates/base.html
+++ b/coffee1-gh-pages/templates/base.html
@@ -30,8 +30,8 @@
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-<a class="navbar-brand" href="{{ url_for('index') }}" style="background-color: white; padding: 10px;">
-    <img src="https://www.nescafe.com/my/themes/custom/nescafe_design_refresh/LOGO-black_new.svg" alt="Nescafe UUM">
+<a class="navbar-brand" href="{{ url_for('index') }}" style="background-color: transparent; padding: 10px;">
+    <img src="../static/images/neskepe_logo.png" alt="Nescafe UUM">
 </a>
 
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,13 @@
 	          <li class="nav-item"><a href="{{ url_for('service') }}" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
 	          <li class="nav-item dropdown">
-
+              <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+              	<a class="dropdown-item" href="{{ url_for('shop') }}">Shop</a>
+                <a class="dropdown-item" href="{{ url_for('product') }}">Single Product</a>
+                <a class="dropdown-item" href="{{ url_for('cart') }}">Cart</a>
+                <a class="dropdown-item" href="{{ url_for('checkout') }}">Checkout</a>
+              </div>
             </li>
 	          <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
 	          <li class="nav-item cart"><a href="{{ url_for('cart') }}" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
@@ -66,58 +72,22 @@
               <h2 class="ftco-heading-2">About Us</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate icon-tiktok"><a href="https://www.tiktok.com/@nescafehubuum23"><img src="../static/images/tik-tok.png" alt="TikTok Icon"></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/people/Nescafe-Hub-UUM-2023/100092691943251/?mibextid=LQQJ4d"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/nescafehub2023/?igshid=OGQ5ZDc2ODk2ZA=="><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(../static/images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(../static/images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
-             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Cooked</a></li>
-                <li><a href="#" class="py-2 d-block">Deliver</a></li>
-                <li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-                <li><a href="#" class="py-2 d-block">Mixed</a></li>
-              </ul>
-            </div>
-          </div>
+
+
           <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">School of Business and Management, Universiti Utara Malaysia, Kedah, Malaysia</span></li>
+	                <li><a ><span class="icon icon-phone"></span><span class="text">+601124144852</span></a></li>
+	                <li><a href="https://linktr.ee/nescafehubuum"><span class="icon icon-envelope"></span><span class="text">Our Link tree!!</span></a></li>
 	              </ul>
 	            </div>
             </div>
