--- a/coffee1-gh-pages/templates/index.html
+++ b/coffee1-gh-pages/templates/index.html
@@ -73,22 +73,22 @@
 	    				<div class="col-md-4 d-flex ftco-animate">
 	    					<div class="icon"><span class="icon-phone"></span></div>
 	    					<div class="text">
-	    						<h3>000 (123) 456 7890</h3>
-	    						<p>A small river named Duden flows by their place and supplies.</p>
+	    						<h3>Ring us!</h3>
+	    						<p>+601124144852</p>
 	    					</div>
 	    				</div>
 	    				<div class="col-md-4 d-flex ftco-animate">
 	    					<div class="icon"><span class="icon-my_location"></span></div>
 	    					<div class="text">
-	    						<h3>198 West 21th Street</h3>
-	    						<p>	203 Fake St. Mountain View, San Francisco, California, USA</p>
+	    						<h3>Find us at:</h3>
+	    						<p>	School of Business and Management, Universiti Utara Malaysia, Kedah, Malaysia</p>
 	    					</div>
 	    				</div>
 	    				<div class="col-md-4 d-flex ftco-animate">
 	    					<div class="icon"><span class="icon-clock-o"></span></div>
 	    					<div class="text">
-	    						<h3>Open Monday-Friday</h3>
-	    						<p>8:00am - 9:00pm</p>
+	    						<h3>We're open</h3>
+	    						<p>Saturday - Thursday (except for Public Holidays) 9AM - 5PM</p>
 	    					</div>
 	    				</div>
 	    			</div>
@@ -137,7 +137,7 @@
     </section>
 
     <section class="ftco-about d-md-flex">
-    	<div class="one-half img" style="background-image: url(../static/images/about.jpg);"></div>
+    	<div class="one-half img" style="background-image: url(../static/images/bg_6.jpg);"></div>
     	<div class="one-half ftco-animate">
     		<div class="overlap">
 	        <div class="heading-section ftco-animate ">
@@ -145,7 +145,7 @@
 	          <h2 class="mb-4">Our Story</h2>
 	        </div>
 	        <div>
-	  				<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+	  				<p>Our beverage kiosk based at SBM UUM, offers a wide range of selectable and energizing beverages. The kiosk has been operating since 2019 and is located at the ground floor of the SBM building. It serves a variety of hot and cold beverages, such as coffee and smoothies. The kiosk attracts many students and staff who enjoy its affordable prices, friendly service, and cosy atmosphere.</p>
 	  			</div>
   			</div>
     	</div>
