--- a/coffee1-gh-pages/templates/services.html
+++ b/coffee1-gh-pages/templates/services.html
@@ -10,7 +10,7 @@
           <div class="row slider-text justify-content-center align-items-center">
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
-            	<h1 class="mb-3 mt-5 bread">Services</h1>
+            	<span class="subheading">Services</span>
 	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Services</span></p>
             </div>
 
