--- a/coffee1-gh-pages/templates/base.html
+++ b/coffee1-gh-pages/templates/base.html
@@ -30,9 +30,9 @@
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-<a class="navbar-brand" href="{{ url_for('index') }}" style="background-color: transparent; padding: 10px;">
-    <img src="../static/images/neskepe_logo.png" alt="Nescafe UUM">
-</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}" style="background-color: transparent; padding: 10px;">
+            <img src="../static/images/neskepe_logo.png" alt="Nescafe UUM">
+          </a>
 
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
@@ -42,7 +42,6 @@
 	          <li class="nav-item "><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{{ url_for('menu') }}" class="nav-link">Menu</a></li>
 	          <li class="nav-item"><a href="{{ url_for('service') }}" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
 	          <li class="nav-item cart"><a href="{{ url_for('cart') }}" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
 	        </ul>
@@ -50,6 +49,7 @@
 		  </div>
 	  </nav>
     <!-- END nav -->
+
 
     {% block content %}
     {% endblock %}
@@ -77,19 +77,28 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">School of Business and Management, Universiti Utara Malaysia, Kedah, Malaysia</span></li>
-	                <li><a ><span class="icon icon-phone"></span><span class="text">+601124144852</span></a></li>
+	                <li><a ><span class="icon icon-phone"></span><span class="text">+6011 241 44852(Izni)</span></a></li>
 	                <li><a href="https://linktr.ee/nescafehubuum"><span class="icon icon-envelope"></span><span class="text">Our Link tree!!</span></a></li>
 	              </ul>
 	            </div>
             </div>
           </div>
+
+
+            <div class="col-lg-6 col-md-6 mb-5 mb-md-5">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63515.9764828067!2d100.5068311!3d6.4636496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304cae220194adbf%3A0xdf0a9fec53b0affb!2sSchool%20of%20Business%20Management%20(SBM)!5e0!3m2!1sen!2sca!4v1560918226517!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+
+          </div>
         </div>
+
+
         <div class="row">
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
@@ -97,23 +106,25 @@
 
 
 
-  <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-  <script src="../static/js/jquery.min.js"></script>
-  <script src="../static/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../static/js/popper.min.js"></script>
-  <script src="../static/js/bootstrap.min.js"></script>
-  <script src="../static/js/jquery.easing.1.3.js"></script>
-  <script src="../static/js/jquery.waypoints.min.js"></script>
-  <script src="../static/js/jquery.stellar.min.js"></script>
-  <script src="../static/js/owl.carousel.min.js"></script>
-  <script src="../static/js/jquery.magnific-popup.min.js"></script>
-  <script src="../static/js/aos.js"></script>
-  <script src="../static/js/jquery.animateNumber.min.js"></script>
-  <script src="../static/js/bootstrap-datepicker.js"></script>
-  <script src="../static/js/jquery.timepicker.min.js"></script>
-  <script src="../static/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="../static/js/google-map.js"></script>
-  <script src="../static/js/main.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery.easing.1.3.js"></script>
+    <script src="../static/js/jquery.waypoints.min.js"></script>
+    <script src="../static/js/jquery.stellar.min.js"></script>
+    <script src="../static/js/owl.carousel.min.js"></script>
+    <script src="../static/js/jquery.magnific-popup.min.js"></script>
+    <script src="../static/js/aos.js"></script>
+    <script src="../static/js/jquery.animateNumber.min.js"></script>
+    <script src="../static/js/bootstrap-datepicker.js"></script>
+    <script src="../static/js/jquery.timepicker.min.js"></script>
+    <script src="../static/js/scrollax.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="../static/js/google-map.js"></script>
+    <script src="../static/js/main.js"></script>
+  </body>
+</html>
