--- a/coffee1-gh-pages/templates/contact.html
+++ b/coffee1-gh-pages/templates/contact.html
@@ -5,14 +5,14 @@
 
     <section class="home-slider owl-carousel">
 
-      <div class="slider-item" style="background-image: url(../static/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+      <div class="slider-item" style="background-image: url(../static/images/contact.jpg);" data-stellar-background-ratio="0.5">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center">
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
-            	<h1 class="mb-3 mt-5 bread">Contact Us</h1>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Contact</span></p>
+            	<span class="subheading">Contact Us</span>
+
             </div>
 
           </div>
@@ -29,17 +29,15 @@
 	              <h2 class="h4">Contact Information</h2>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+	              <p><span>Address:</span>School of Business and Management, Universiti Utara Malaysia, Kedah, Malaysia</p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+	              <p><span>Phone:</span> <a href="https://wa.link/yt5qhe">+6011 241 44852(Izni)</a></p>
 	            </div>
 	            <div class="col-md-12 mb-3">
-	              <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	              <p><span>More infos:</span> <a href="https://linktr.ee/nescafehubuum">Our link tree!</a></p>
 	            </div>
-	            <div class="col-md-12 mb-3">
-	              <p><span>Website:</span> <a href="#">yoursite.com</a></p>
-	            </div>
+
 						</div>
 					</div>
 					<div class="col-md-1"></div>
