--- a/coffee1-gh-pages/templates/menu.html
+++ b/coffee1-gh-pages/templates/menu.html
@@ -16,8 +16,11 @@
 	}
 </style>
 <html lang="en">
-  {% extends 'base.html' %}
-{% block content %}
+  	{% extends 'base.html' %}
+	{% block content %}
+	<body>
+
+
 
     <section class="home-slider owl-carousel">
 
@@ -28,7 +31,6 @@
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
             	<span class="subheading">Our Menu</span>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="{{ url_for('index') }}">Home</a></span> <span>Menu</span></p>
             </div>
 
           </div>
@@ -186,7 +188,7 @@
     		<div class="row d-md-flex">
 	    		<div class="col-lg-12 ftco-animate p-md-5">
 		    		<div class="row">
-		         
+
 		          <div class="col-md-12 d-flex align-items-center">
 
 		            <div class="tab-content ftco-animate" id="v-pills-tabContent">
